added event on form for encounter subission bu user

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </ul>
         <form action="" class="">
          <input type="text" placeholder="🔍 Search emojies..." class="px-6 py-2 rounded-4xl bg-emerald-50">
+         <button type="submit">🔍</button>
         </form>
     </div>
     <div class="emoji-container flex flex-wrap  justify-center gap-2 px-12"></div>
