fixed issue: text color of search input at dark mode

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </form>
     </div>
     <!--! emoji container : emojis will be fetched dynamically via JS -->
-    <div class="emoji-container flex flex-wrap  justify-center gap-2 px-12"></div>
+    <div id="search-input" class="emoji-container flex flex-wrap  justify-center gap-2 px-12 "></div>
     <script src="script.js" type="module"></script>
 </body>
 </html>
